[project]
name = "outlines-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.8.1",
    "datasets>=3.6.0",
    "fastapi[standard]>=0.116.0",
    "jsonschema>=4.24.0",
    "numpy>=2.3.1",
    "ollama>=0.5.1",
    "outlines[ollama,transformers]>=1.0.4",
    "pydantic>=2.11.7",
    "runpod>=1.7.12",
    "transformers>=4.53.1",
    "typing>=3.10.0.0",
]
